sample-apps/echo-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        ports:
        - containerPort: 80
        command: [ ]
        args: [ "-text=Hello! P.CL Kubernetes Service :)", "-listen=:80" ]
