sample-apps/echo-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo
  ports:
  - name: echo
    protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
