sample-apps/echo-3-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: echo.pcl.com
    http:
      paths:
      - backend:
          serviceName: echo-service
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
