sample-apps/nginx-4-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nginx.pcl.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /
